# duckdb-extension-template

./: CMakeLists.txt  Makefile
